section mobile fix

--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -38,6 +38,7 @@
 			height: 3px;
 			color: #333;
 			background-color: #333;
+			border: none;
 		}
 
 	}
